BuildHughes/translation-tool/inputs/source_meta/objects/HughesSvc_IntegrationEndPoints__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The custom setting would store the End point URLs, SOAP actions for different process of E-bonding from Peoplesoft to SFDC</description>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOAP_Action__c</fullName>
        <description>This field holds the SOAP action for e bonding between SFDC and Peoplesoft</description>
        <label>SOAP Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>WebService Callout timout in milliseconds</description>
        <inlineHelpText>WebService Callout timout in milliseconds</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>userName__c</fullName>
        <label>userName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>HughesSvc_IntegrationEndPoints</label>
</CustomObject>